# donna

./: .gitignore  README.md  docker-compose.yml  mise.toml
.playwright-mcp/: page-2026-05-18T17-56-57-048Z.yml  page-2026-05-18T18-02-58-475Z.yml
design_handoff_talent_scout/: README.md  Talent Scout.html  app.css  app.jsx  data.js  detail-view.jsx  list-view.jsx
docs/: ui-design-prompt.md
docs/handoffs/: 2026-05-18-183000-talent-scout-v1.md  2026-05-18-213000-enrichment-ui-v2.md  2026-05-18-220000-enrichment-ui-final.md  2026-05-18-300000-donna-enrichment-pipeline.md
docs/learnings/: 2026-05-18-full-stack-agent-platform.md
docs/research/: 2026-05-18-motion-streaming-animations.md
docs/superpowers/plans/: 2026-05-18-enrichment-stream-ui.md  2026-05-18-postgres-agent-enrichment.md  2026-05-18-talent-scout.md  2026-05-18-ts-enrichment-agent.md  2026-05-18-ui-redesign.md
docs/superpowers/specs/: 2026-05-18-agent-enrichment-design.md  2026-05-18-enrichment-stream-ui-design.md  2026-05-18-json-render-enrichment-ui.md  2026-05-18-postgres-agent-enrichment-design.md  2026-05-18-ts-enrichment-agent-design.md  2026-05-18-web-enrichment-design.md
pipeline/: pyproject.toml
pipeline/src/scout/: analyze.py  cache.py  cli.py  config.py  db.py  deep_dive.py  enrich.py  events.py  github.py  linkedin.py  pipeline.py  prompts.py  tools.py  web_enrich.py  web_search.py
web/: package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
web/src/components/: activity-list.tsx  assessment-card.tsx  atoms.tsx  (+20 more)
(+37 files in other folders)
