[project]
name = "scout"
version = "0.1.0"
description = "GitHub fork profiler pipeline for willchen96/mike"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "claude-agent-sdk>=0.2.82",
    "httpx>=0.28.1",
    "typer>=0.25.1",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "stagehand>=3.19.5",
    "firecrawl-py",
    "pydantic>=2.0",
]

[project.scripts]
scout = "scout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]
